include/codata_constants_2018.h

ADD_IMPORT extern const double KILOGRAM_HERTZ_RELATIONSHIP;/**< Hz */
ADD_IMPORT extern const double U_KILOGRAM_HERTZ_RELATIONSHIP;/**< Hz */
ADD_IMPORT extern const double KILOGRAM_INVERSE_METER_RELATIONSHIP;/**< m^-1 */
ADD_IMPORT extern const double U_KILOGRAM_INVERSE_METER_RELATIONSHIP;/**< m^-1 */
ADD_IMPORT extern const double KILOGRAM_JOULE_RELATIONSHIP;/**< J */
ADD_IMPORT extern const double U_KILOGRAM_JOULE_RELATIONSHIP;/**< J */
ADD_IMPORT extern const double KILOGRAM_KELVIN_RELATIONSHIP;/**< K */
ADD_IMPORT extern const double U_KILOGRAM_KELVIN_RELATIONSHIP;/**< K */
ADD_IMPORT extern const double LATTICE_PARAMETER_OF_SILICON;/**< m */
ADD_IMPORT extern const double U_LATTICE_PARAMETER_OF_SILICON;/**< m */
ADD_IMPORT extern const double LATTICE_SPACING_OF_IDEAL_SI__220;/**< m */
ADD_IMPORT extern const double U_LATTICE_SPACING_OF_IDEAL_SI__220;/**< m */
ADD_IMPORT extern const double LOSCHMIDT_CONSTANT__273_15_K__100_KPA;/**< m^-3 */
ADD_IMPORT extern const double U_LOSCHMIDT_CONSTANT__273_15_K__100_KPA;/**< m^-3 */
ADD_IMPORT extern const double LOSCHMIDT_CONSTANT__273_15_K__101_325_KPA;/**< m^-3 */
ADD_IMPORT extern const double U_LOSCHMIDT_CONSTANT__273_15_K__101_325_KPA;/**< m^-3 */
ADD_IMPORT extern const double LUMINOUS_EFFICACY;/**< lm W^-1 */
ADD_IMPORT extern const double U_LUMINOUS_EFFICACY;/**< lm W^-1 */
ADD_IMPORT extern const double MAG__FLUX_QUANTUM;/**< Wb */
ADD_IMPORT extern const double U_MAG__FLUX_QUANTUM;/**< Wb */
ADD_IMPORT extern const double MOLAR_GAS_CONSTANT;/**< J mol^-1 K^-1 */
ADD_IMPORT extern const double U_MOLAR_GAS_CONSTANT;/**< J mol^-1 K^-1 */
ADD_IMPORT extern const double MOLAR_MASS_CONSTANT;/**< kg mol^-1 */
ADD_IMPORT extern const double U_MOLAR_MASS_CONSTANT;/**< kg mol^-1 */
ADD_IMPORT extern const double MOLAR_MASS_OF_CARBON_12;/**< kg mol^-1 */
ADD_IMPORT extern const double U_MOLAR_MASS_OF_CARBON_12;/**< kg mol^-1 */
ADD_IMPORT extern const double MOLAR_PLANCK_CONSTANT;/**< J Hz^-1 mol^-1 */
ADD_IMPORT extern const double U_MOLAR_PLANCK_CONSTANT;/**< J Hz^-1 mol^-1 */
ADD_IMPORT extern const double MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__100_KPA;/**< m^3 mol^-1 */
ADD_IMPORT extern const double U_MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__100_KPA;/**< m^3 mol^-1 */
ADD_IMPORT extern const double MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__101_325_KPA;/**< m^3 mol^-1 */
ADD_IMPORT extern const double U_MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__101_325_KPA;/**< m^3 mol^-1 */
ADD_IMPORT extern const double MOLAR_VOLUME_OF_SILICON;/**< m^3 mol^-1 */
ADD_IMPORT extern const double U_MOLAR_VOLUME_OF_SILICON;/**< m^3 mol^-1 */
ADD_IMPORT extern const double MOLYBDENUM_X_UNIT;/**< m */
ADD_IMPORT extern const double U_MOLYBDENUM_X_UNIT;/**< m */
ADD_IMPORT extern const double MUON_COMPTON_WAVELENGTH;/**< m */
ADD_IMPORT extern const double U_MUON_COMPTON_WAVELENGTH;/**< m */
ADD_IMPORT extern const double MUON_ELECTRON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double U_MUON_ELECTRON_MASS_RATIO;/**<  */
ADD_IMPORT extern const double MUON_G_FACTOR;/**<  */
ADD_IMPORT extern const double U_MUON_G_FACTOR;/**<  */
ADD_IMPORT extern const double MUON_MAG__MOM;/**< J T^-1 */
ADD_IMPORT extern const double U_MUON_MAG__MOM;/**< J T^-1 */
ADD_IMPORT extern const double MUON_MAG__MOM__ANOMALY;/**<  */
ADD_IMPORT extern const double U_MUON_MAG__MOM__ANOMALY;/**<  */
ADD_IMPORT extern const double MUON_MAG__MOM__TO_BOHR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double U_MUON_MAG__MOM__TO_BOHR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double MUON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double U_MUON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO;/**<  */
ADD_IMPORT extern const double MUON_MASS;/**< kg */
ADD_IMPORT extern const double U_MUON_MASS;/**< kg */
ADD_IMPORT extern const double MUON_MASS_ENERGY_EQUIVALENT;/**< J */
ADD_IMPORT extern const double U_MUON_MASS_ENERGY_EQUIVALENT;/**< J */
ADD_IMPORT extern const double MUON_MASS_ENERGY_EQUIVALENT_IN_MEV;/**< MeV */
ADD_IMPORT extern const double U_MUON_MASS_ENERGY_EQUIVALENT_IN_MEV;/**< MeV */