src/codata_constants_latest.f90


real(cdp), protected, public, bind(C,name="KILOGRAM_HERTZ_RELATIONSHIP"):: &
capi_184=KILOGRAM_HERTZ_RELATIONSHIP !< C API Hz
real(cdp), protected, public, bind(C,name="U_KILOGRAM_HERTZ_RELATIONSHIP") :: &
capi_U_184=U_KILOGRAM_HERTZ_RELATIONSHIP !< C API Hz

real(dp), parameter, public :: KILOGRAM_INVERSE_METER_RELATIONSHIP=4.524438335e41_dp !< m^-1
real(dp), parameter, public :: U_KILOGRAM_INVERSE_METER_RELATIONSHIP=0.0_dp !< m^-1

real(cdp), protected, public, bind(C,name="KILOGRAM_INVERSE_METER_RELATIONSHIP"):: &
capi_185=KILOGRAM_INVERSE_METER_RELATIONSHIP !< C API m^-1
real(cdp), protected, public, bind(C,name="U_KILOGRAM_INVERSE_METER_RELATIONSHIP") :: &
capi_U_185=U_KILOGRAM_INVERSE_METER_RELATIONSHIP !< C API m^-1

real(dp), parameter, public :: KILOGRAM_JOULE_RELATIONSHIP=8.987551787e16_dp !< J
real(dp), parameter, public :: U_KILOGRAM_JOULE_RELATIONSHIP=0.0_dp !< J

real(cdp), protected, public, bind(C,name="KILOGRAM_JOULE_RELATIONSHIP"):: &
capi_186=KILOGRAM_JOULE_RELATIONSHIP !< C API J
real(cdp), protected, public, bind(C,name="U_KILOGRAM_JOULE_RELATIONSHIP") :: &
capi_U_186=U_KILOGRAM_JOULE_RELATIONSHIP !< C API J

real(dp), parameter, public :: KILOGRAM_KELVIN_RELATIONSHIP=6.509657260e39_dp !< K
real(dp), parameter, public :: U_KILOGRAM_KELVIN_RELATIONSHIP=0.0_dp !< K

real(cdp), protected, public, bind(C,name="KILOGRAM_KELVIN_RELATIONSHIP"):: &
capi_187=KILOGRAM_KELVIN_RELATIONSHIP !< C API K
real(cdp), protected, public, bind(C,name="U_KILOGRAM_KELVIN_RELATIONSHIP") :: &
capi_U_187=U_KILOGRAM_KELVIN_RELATIONSHIP !< C API K

real(dp), parameter, public :: LATTICE_PARAMETER_OF_SILICON=5.431020511e-10_dp !< m
real(dp), parameter, public :: U_LATTICE_PARAMETER_OF_SILICON=0.000000089e-10_dp !< m

real(cdp), protected, public, bind(C,name="LATTICE_PARAMETER_OF_SILICON"):: &
capi_188=LATTICE_PARAMETER_OF_SILICON !< C API m
real(cdp), protected, public, bind(C,name="U_LATTICE_PARAMETER_OF_SILICON") :: &
capi_U_188=U_LATTICE_PARAMETER_OF_SILICON !< C API m

real(dp), parameter, public :: LATTICE_SPACING_OF_IDEAL_SI__220=1.920155716e-10_dp !< m
real(dp), parameter, public :: U_LATTICE_SPACING_OF_IDEAL_SI__220=0.000000032e-10_dp !< m

real(cdp), protected, public, bind(C,name="LATTICE_SPACING_OF_IDEAL_SI__220"):: &
capi_189=LATTICE_SPACING_OF_IDEAL_SI__220 !< C API m
real(cdp), protected, public, bind(C,name="U_LATTICE_SPACING_OF_IDEAL_SI__220") :: &
capi_U_189=U_LATTICE_SPACING_OF_IDEAL_SI__220 !< C API m

real(dp), parameter, public :: LOSCHMIDT_CONSTANT__273_15_K__100_KPA=2.651645804e25_dp !< m^-3
real(dp), parameter, public :: U_LOSCHMIDT_CONSTANT__273_15_K__100_KPA=0.0_dp !< m^-3

real(cdp), protected, public, bind(C,name="LOSCHMIDT_CONSTANT__273_15_K__100_KPA"):: &
capi_190=LOSCHMIDT_CONSTANT__273_15_K__100_KPA !< C API m^-3
real(cdp), protected, public, bind(C,name="U_LOSCHMIDT_CONSTANT__273_15_K__100_KPA") :: &
capi_U_190=U_LOSCHMIDT_CONSTANT__273_15_K__100_KPA !< C API m^-3

real(dp), parameter, public :: LOSCHMIDT_CONSTANT__273_15_K__101_325_KPA=2.686780111e25_dp !< m^-3
real(dp), parameter, public :: U_LOSCHMIDT_CONSTANT__273_15_K__101_325_KPA=0.0_dp !< m^-3

real(cdp), protected, public, bind(C,name="LOSCHMIDT_CONSTANT__273_15_K__101_325_KPA"):: &
capi_191=LOSCHMIDT_CONSTANT__273_15_K__101_325_KPA !< C API m^-3
real(cdp), protected, public, bind(C,name="U_LOSCHMIDT_CONSTANT__273_15_K__101_325_KPA") :: &
capi_U_191=U_LOSCHMIDT_CONSTANT__273_15_K__101_325_KPA !< C API m^-3

real(dp), parameter, public :: LUMINOUS_EFFICACY=683_dp !< lm W^-1
real(dp), parameter, public :: U_LUMINOUS_EFFICACY=0.0_dp !< lm W^-1

real(cdp), protected, public, bind(C,name="LUMINOUS_EFFICACY"):: &
capi_192=LUMINOUS_EFFICACY !< C API lm W^-1
real(cdp), protected, public, bind(C,name="U_LUMINOUS_EFFICACY") :: &
capi_U_192=U_LUMINOUS_EFFICACY !< C API lm W^-1

real(dp), parameter, public :: MAG__FLUX_QUANTUM=2.067833848e-15_dp !< Wb
real(dp), parameter, public :: U_MAG__FLUX_QUANTUM=0.0_dp !< Wb

real(cdp), protected, public, bind(C,name="MAG__FLUX_QUANTUM"):: &
capi_193=MAG__FLUX_QUANTUM !< C API Wb
real(cdp), protected, public, bind(C,name="U_MAG__FLUX_QUANTUM") :: &
capi_U_193=U_MAG__FLUX_QUANTUM !< C API Wb

real(dp), parameter, public :: MOLAR_GAS_CONSTANT=8.314462618_dp !< J mol^-1 K^-1
real(dp), parameter, public :: U_MOLAR_GAS_CONSTANT=0.0_dp !< J mol^-1 K^-1

real(cdp), protected, public, bind(C,name="MOLAR_GAS_CONSTANT"):: &
capi_194=MOLAR_GAS_CONSTANT !< C API J mol^-1 K^-1
real(cdp), protected, public, bind(C,name="U_MOLAR_GAS_CONSTANT") :: &
capi_U_194=U_MOLAR_GAS_CONSTANT !< C API J mol^-1 K^-1

real(dp), parameter, public :: MOLAR_MASS_CONSTANT=0.99999999965e-3_dp !< kg mol^-1
real(dp), parameter, public :: U_MOLAR_MASS_CONSTANT=0.00000000030e-3_dp !< kg mol^-1

real(cdp), protected, public, bind(C,name="MOLAR_MASS_CONSTANT"):: &
capi_195=MOLAR_MASS_CONSTANT !< C API kg mol^-1
real(cdp), protected, public, bind(C,name="U_MOLAR_MASS_CONSTANT") :: &
capi_U_195=U_MOLAR_MASS_CONSTANT !< C API kg mol^-1

real(dp), parameter, public :: MOLAR_MASS_OF_CARBON_12=11.9999999958e-3_dp !< kg mol^-1
real(dp), parameter, public :: U_MOLAR_MASS_OF_CARBON_12=0.0000000036e-3_dp !< kg mol^-1

real(cdp), protected, public, bind(C,name="MOLAR_MASS_OF_CARBON_12"):: &
capi_196=MOLAR_MASS_OF_CARBON_12 !< C API kg mol^-1
real(cdp), protected, public, bind(C,name="U_MOLAR_MASS_OF_CARBON_12") :: &
capi_U_196=U_MOLAR_MASS_OF_CARBON_12 !< C API kg mol^-1

real(dp), parameter, public :: MOLAR_PLANCK_CONSTANT=3.990312712e-10_dp !< J Hz^-1 mol^-1
real(dp), parameter, public :: U_MOLAR_PLANCK_CONSTANT=0.0_dp !< J Hz^-1 mol^-1

real(cdp), protected, public, bind(C,name="MOLAR_PLANCK_CONSTANT"):: &
capi_197=MOLAR_PLANCK_CONSTANT !< C API J Hz^-1 mol^-1
real(cdp), protected, public, bind(C,name="U_MOLAR_PLANCK_CONSTANT") :: &
capi_U_197=U_MOLAR_PLANCK_CONSTANT !< C API J Hz^-1 mol^-1

real(dp), parameter, public :: MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__100_KPA=22.71095464e-3_dp !< m^3 mol^-1
real(dp), parameter, public :: U_MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__100_KPA=0.0_dp !< m^3 mol^-1

real(cdp), protected, public, bind(C,name="MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__100_KPA"):: &
capi_198=MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__100_KPA !< C API m^3 mol^-1
real(cdp), protected, public, bind(C,name="U_MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__100_KPA") :: &
capi_U_198=U_MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__100_KPA !< C API m^3 mol^-1

real(dp), parameter, public :: MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__101_325_KPA=22.41396954e-3_dp !< m^3 mol^-1
real(dp), parameter, public :: U_MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__101_325_KPA=0.0_dp !< m^3 mol^-1

real(cdp), protected, public, bind(C,name="MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__101_325_KPA"):: &
capi_199=MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__101_325_KPA !< C API m^3 mol^-1
real(cdp), protected, public, bind(C,name="U_MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__101_325_KPA") :: &
capi_U_199=U_MOLAR_VOLUME_OF_IDEAL_GAS__273_15_K__101_325_KPA !< C API m^3 mol^-1

real(dp), parameter, public :: MOLAR_VOLUME_OF_SILICON=1.205883199e-5_dp !< m^3 mol^-1
real(dp), parameter, public :: U_MOLAR_VOLUME_OF_SILICON=0.000000060e-5_dp !< m^3 mol^-1

real(cdp), protected, public, bind(C,name="MOLAR_VOLUME_OF_SILICON"):: &
capi_200=MOLAR_VOLUME_OF_SILICON !< C API m^3 mol^-1
real(cdp), protected, public, bind(C,name="U_MOLAR_VOLUME_OF_SILICON") :: &
capi_U_200=U_MOLAR_VOLUME_OF_SILICON !< C API m^3 mol^-1

real(dp), parameter, public :: MOLYBDENUM_X_UNIT=1.00209952e-13_dp !< m
real(dp), parameter, public :: U_MOLYBDENUM_X_UNIT=0.00000053e-13_dp !< m

real(cdp), protected, public, bind(C,name="MOLYBDENUM_X_UNIT"):: &
capi_201=MOLYBDENUM_X_UNIT !< C API m
real(cdp), protected, public, bind(C,name="U_MOLYBDENUM_X_UNIT") :: &
capi_U_201=U_MOLYBDENUM_X_UNIT !< C API m

real(dp), parameter, public :: MUON_COMPTON_WAVELENGTH=1.173444110e-14_dp !< m
real(dp), parameter, public :: U_MUON_COMPTON_WAVELENGTH=0.000000026e-14_dp !< m

real(cdp), protected, public, bind(C,name="MUON_COMPTON_WAVELENGTH"):: &
capi_202=MUON_COMPTON_WAVELENGTH !< C API m
real(cdp), protected, public, bind(C,name="U_MUON_COMPTON_WAVELENGTH") :: &
capi_U_202=U_MUON_COMPTON_WAVELENGTH !< C API m

real(dp), parameter, public :: MUON_ELECTRON_MASS_RATIO=206.7682830_dp !< dimensionless
real(dp), parameter, public :: U_MUON_ELECTRON_MASS_RATIO=0.0000046_dp !< dimensionless

real(cdp), protected, public, bind(C,name="MUON_ELECTRON_MASS_RATIO"):: &
capi_203=MUON_ELECTRON_MASS_RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_MUON_ELECTRON_MASS_RATIO") :: &
capi_U_203=U_MUON_ELECTRON_MASS_RATIO !< C API dimensionless

real(dp), parameter, public :: MUON_G_FACTOR=-2.0023318418_dp !< dimensionless
real(dp), parameter, public :: U_MUON_G_FACTOR=0.0000000013_dp !< dimensionless

real(cdp), protected, public, bind(C,name="MUON_G_FACTOR"):: &
capi_204=MUON_G_FACTOR !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_MUON_G_FACTOR") :: &
capi_U_204=U_MUON_G_FACTOR !< C API dimensionless

real(dp), parameter, public :: MUON_MAG__MOM=-4.49044830e-26_dp !< J T^-1
real(dp), parameter, public :: U_MUON_MAG__MOM=0.00000010e-26_dp !< J T^-1

real(cdp), protected, public, bind(C,name="MUON_MAG__MOM"):: &
capi_205=MUON_MAG__MOM !< C API J T^-1
real(cdp), protected, public, bind(C,name="U_MUON_MAG__MOM") :: &
capi_U_205=U_MUON_MAG__MOM !< C API J T^-1

real(dp), parameter, public :: MUON_MAG__MOM__ANOMALY=1.16592089e-3_dp !< dimensionless
real(dp), parameter, public :: U_MUON_MAG__MOM__ANOMALY=0.00000063e-3_dp !< dimensionless

real(cdp), protected, public, bind(C,name="MUON_MAG__MOM__ANOMALY"):: &
capi_206=MUON_MAG__MOM__ANOMALY !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_MUON_MAG__MOM__ANOMALY") :: &
capi_U_206=U_MUON_MAG__MOM__ANOMALY !< C API dimensionless

real(dp), parameter, public :: MUON_MAG__MOM__TO_BOHR_MAGNETON_RATIO=-4.84197047e-3_dp !< dimensionless
real(dp), parameter, public :: U_MUON_MAG__MOM__TO_BOHR_MAGNETON_RATIO=0.00000011e-3_dp !< dimensionless

real(cdp), protected, public, bind(C,name="MUON_MAG__MOM__TO_BOHR_MAGNETON_RATIO"):: &
capi_207=MUON_MAG__MOM__TO_BOHR_MAGNETON_RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_MUON_MAG__MOM__TO_BOHR_MAGNETON_RATIO") :: &
capi_U_207=U_MUON_MAG__MOM__TO_BOHR_MAGNETON_RATIO !< C API dimensionless

real(dp), parameter, public :: MUON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO=-8.89059703_dp !< dimensionless
real(dp), parameter, public :: U_MUON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO=0.00000020_dp !< dimensionless

real(cdp), protected, public, bind(C,name="MUON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO"):: &
capi_208=MUON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO !< C API dimensionless
real(cdp), protected, public, bind(C,name="U_MUON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO") :: &
capi_U_208=U_MUON_MAG__MOM__TO_NUCLEAR_MAGNETON_RATIO !< C API dimensionless

real(dp), parameter, public :: MUON_MASS=1.883531627e-28_dp !< kg
real(dp), parameter, public :: U_MUON_MASS=0.000000042e-28_dp !< kg

real(cdp), protected, public, bind(C,name="MUON_MASS"):: &
capi_209=MUON_MASS !< C API kg
real(cdp), protected, public, bind(C,name="U_MUON_MASS") :: &
capi_U_209=U_MUON_MASS !< C API kg

real(dp), parameter, public :: MUON_MASS_ENERGY_EQUIVALENT=1.692833804e-11_dp !< J
real(dp), parameter, public :: U_MUON_MASS_ENERGY_EQUIVALENT=0.000000038e-11_dp !< J

real(cdp), protected, public, bind(C,name="MUON_MASS_ENERGY_EQUIVALENT"):: &
capi_210=MUON_MASS_ENERGY_EQUIVALENT !< C API J
real(cdp), protected, public, bind(C,name="U_MUON_MASS_ENERGY_EQUIVALENT") :: &
capi_U_210=U_MUON_MASS_ENERGY_EQUIVALENT !< C API J

real(dp), parameter, public :: MUON_MASS_ENERGY_EQUIVALENT_IN_MEV=105.6583755_dp !< MeV
real(dp), parameter, public :: U_MUON_MASS_ENERGY_EQUIVALENT_IN_MEV=0.0000023_dp !< MeV
